==> axf33480/ESP32CommandStation/components/StatusDisplay/StatusDisplay.cpp <==
#include "sdkconfig.h"
#include "StatusDisplay.h"
#include <AllTrainNodes.hxx>
#include <ConfigurationManager.h>
#include <driver/i2c.h>
#include <esp_ota_ops.h>
#include <freertos_drivers/esp32/Esp32WiFiManager.hxx>
#include <RMTTrackDevice.h>

StateFlowBase::Action StatusDisplay::init()
{
#if !CONFIG_DISPLAY_TYPE_NONE
  LOG(INFO, "[StatusDisplay] Initializing I2C driver...");
  i2c_config_t i2c_config =
  {
    .mode = I2C_MODE_MASTER,
    .sda_io_num = (gpio_num_t)CONFIG_DISPLAY_SDA,
    .sda_pullup_en = GPIO_PULLUP_ENABLE,
    .scl_io_num = (gpio_num_t)CONFIG_DISPLAY_SCL,
    .scl_pullup_en = GPIO_PULLUP_ENABLE,
    .master =
    {
      .clk_speed = CONFIG_DISPLAY_I2C_BUS_SPEED
    }
  };
  ESP_ERROR_CHECK(i2c_param_config(I2C_NUM_0, &i2c_config));
  ESP_ERROR_CHECK(i2c_driver_install(I2C_NUM_0, I2C_MODE_MASTER, 0, 0, 0));

  // scan a handful of known I2C address ranges for LCD or OLED devices
  esp_err_t ret;
#if CONFIG_DISPLAY_TYPE_OLED
  for(uint8_t addr = 0x3C; addr <= 0x3C; addr++)
  {
    LOG(VERBOSE, "[StatusDisplay] Searching for OLED on address 0x%02x...", addr);
    I2C_READ_REG(addr, 0, regZero_, 1, ret);
    if (ret == ESP_OK)
    {
      i2cAddr_ = addr;
      return call_immediately(STATE(initOLED));
    }
  }
#elif CONFIG_DISPLAY_TYPE_LCD
  // PCF8574 or MCP23008
  for(uint8_t addr = 0x20; addr <= 0x27; addr++)
  {
    LOG(VERBOSE, "[StatusDisplay] Searching for LCD on address 0x%02x...", addr);
    I2C_READ_REG(addr, 0, regZero_, 1, ret);
    if (ret == ESP_OK)
    {
      i2cAddr_ = addr;
      return call_immediately(STATE(initLCD));
    }
  }
  // PCF8574A
  for(uint8_t addr = 0x38; addr <= 0x3F; addr++)
  {
    LOG(VERBOSE, "[StatusDisplay] Searching for LCD on address 0x%02x...", addr);
    I2C_READ_REG(addr, 0, regZero_, 1, ret);
    if (ret == ESP_OK)
    {
      i2cAddr_ = addr;
      return call_immediately(STATE(initLCD));
    }
  }
#endif
  LOG(WARNING, "[StatusDisplay] no display detected");

  // Scan the I2C bus and dump the output of devices that respond
  std::string scanresults =
    "     0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f\n"
    "00:         ";
  scanresults.reserve(256);
  for (uint8_t addr=3; addr < 0x78; addr++)
  {
    if (addr % 16 == 0)
    {
      scanresults += "\n" + int64_to_string_hex(addr) + ":";
    }
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (addr << 1) | I2C_MASTER_WRITE, true);
    i2c_master_stop(cmd);
    esp_err_t ret = i2c_master_cmd_begin(I2C_NUM_0, cmd, DISPLAY_I2C_TIMEOUT);
    i2c_cmd_link_delete(cmd);
    if (ret == ESP_OK)
    {
      scanresults += int64_to_string_hex(addr);
    }
    else if (ret == ESP_ERR_TIMEOUT)
    {
      scanresults += " ??";
    }
    else
    {
      scanresults += " --";
    }
  }
  LOG(INFO, "[StatusDisplay] %s", scanresults.c_str());
  LOG(WARNING, "[StatusDisplay] A supported display was not detected, below "
      "are the detected I2C devices\n%s", scanresults.c_str());
#endif // !CONFIG_DISPLAY_TYPE_NONE
  return exit();
}

StateFlowBase::Action StatusDisplay::initOLED()
{
#if CONFIG_DISPLAY_TYPE_OLED
  LOG(INFO, "[StatusDisplay] OLED display detected on address 0x%02x"
    , i2cAddr_);
#if CONFIG_DISPLAY_OLED_RESET_PIN != -1
  static bool resetCalled = false;
  if(!resetCalled)
  {
    LOG(INFO, "[StatusDisplay] Resetting OLED display");
    gpio_pad_select_gpio((gpio_num_t)CONFIG_DISPLAY_OLED_RESET_PIN);
    gpio_set_direction((gpio_num_t)CONFIG_DISPLAY_OLED_RESET_PIN
                      , GPIO_MODE_OUTPUT);
    gpio_set_level((gpio_num_t)CONFIG_DISPLAY_OLED_RESET_PIN, 0);
    resetCalled = true;
    return sleep_and_call(&timer_, MSEC_TO_NSEC(50), STATE(initOLED));
  }
  else
  {
    gpio_set_level((gpio_num_t)CONFIG_DISPLAY_OLED_RESET_PIN, 1);
  }
#endif // CONFIG_DISPLAY_OLED_RESET_PIN
  i2c_cmd_handle_t cmd = i2c_cmd_link_create();
  i2c_master_start(cmd);
	i2c_master_write_byte(cmd, (i2cAddr_ << 1) | I2C_MASTER_WRITE, true);
  i2c_master_write_byte(cmd, OLED_COMMAND_STREAM, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_OFF, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_MUX, true);
  i2c_master_write_byte(cmd, CONFIG_DISPLAY_OLED_WIDTH -1, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_OFFSET, true);
  i2c_master_write_byte(cmd, 0x00, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_START_LINE, true);
  i2c_master_write_byte(cmd, OLED_SET_CHARGEPUMP, true);
  i2c_master_write_byte(cmd, OLED_CHARGEPUMP_ON, true);

  // Test the register zero data with power/state masked to identify the
  // connected chipset since SSD1306 and SH1106 require slightly different
  // initialization parameters.
  if (((regZero_ & 0x0F) == 0x03) || ((regZero_ & 0x0F) == 0x06))
  {
    LOG(INFO, "[StatusDisplay] OLED driver IC: SSD1306");
    i2c_master_write_byte(cmd, OLED_CLOCK_DIVIDER, true);
    i2c_master_write_byte(cmd, 0x80, true);
    i2c_master_write_byte(cmd, OLED_MEMORY_MODE, true);
    i2c_master_write_byte(cmd, OLED_MEMORY_MODE_PAGE, true);
    i2c_master_write_byte(cmd, OLED_SET_PRECHARGE, true);
    i2c_master_write_byte(cmd, 0xF1, true);
    i2c_master_write_byte(cmd, OLED_SET_VCOMH, true);
    i2c_master_write_byte(cmd, 0x40, true);
  }
  else if (((regZero_ & 0x0F) == 0x08))
  {
    LOG(INFO, "[StatusDisplay] OLED driver IC: SH1106");
    sh1106_ = true;
    i2c_master_write_byte(cmd, OLED_CLOCK_DIVIDER, true);
    i2c_master_write_byte(cmd, 0xF0, true);
    i2c_master_write_byte(cmd, OLED_MEMORY_MODE, true);
    i2c_master_write_byte(cmd, OLED_MEMORY_MODE_HORIZONTAL, true);
    i2c_master_write_byte(cmd, OLED_SET_PRECHARGE, true);
    i2c_master_write_byte(cmd, 0x22, true);
    i2c_master_write_byte(cmd, OLED_SET_VCOMH, true);
    i2c_master_write_byte(cmd, 0x30, true);
  }
  else
  {
    LOG(WARNING, "[StatusDisplay] Unrecognized OLED Register zero value: %x"
      , regZero_ & 0x0F);
    // cleanup and abort init process
    i2c_cmd_link_delete(cmd);
    return exit();
  }
  LOG(INFO, "[StatusDisplay] OLED display size: %dx%d (%d lines)"
    , CONFIG_DISPLAY_OLED_WIDTH, CONFIG_DISPLAY_OLED_HEIGHT
    , CONFIG_DISPLAY_LINE_COUNT);

#if CONFIG_DISPLAY_OLED_VFLIP
  i2c_master_write_byte(cmd, OLED_SET_SEGMENT_MAP_INVERTED, true);
  i2c_master_write_byte(cmd, OLED_SET_SCAN_MODE_INVERTED, true);
#else
  i2c_master_write_byte(cmd, OLED_SET_SEGMENT_MAP_NORMAL, true);
  i2c_master_write_byte(cmd, OLED_SET_SCAN_MODE_NORMAL, true);
#endif

  i2c_master_write_byte(cmd, OLED_COM_PIN_MAP, true);
#if CONFIG_DISPLAY_OLED_128x64
  i2c_master_write_byte(cmd, 0x12, true);
#elif CONFIG_DISPLAY_OLED_128x32 || CONFIG_DISPLAY_OLED_96x16
  i2c_master_write_byte(cmd, 0x02, true);
#endif

  i2c_master_write_byte(cmd, OLED_SET_CONTRAST, true);
  i2c_master_write_byte(cmd, CONFIG_DISPLAY_OLED_CONTRAST, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_RAM, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_NORMAL, true);
  i2c_master_write_byte(cmd, OLED_DISABLE_SCROLL, true);
  i2c_master_write_byte(cmd, OLED_DISPLAY_ON, true);
	i2c_master_stop(cmd);

  LOG(INFO, "[StatusDisplay] Initializing OLED display");
  esp_err_t ret =
    ESP_ERROR_CHECK_WITHOUT_ABORT(i2c_master_cmd_begin(I2C_NUM_0, cmd
                                                     , DISPLAY_I2C_TIMEOUT));
  i2c_cmd_link_delete(cmd);
  if (ret != ESP_OK)
  {
    LOG_ERROR("[StatusDisplay] Failed to initialize the OLED display");
    return exit();
  }
  LOG(INFO, "[StatusDisplay] OLED successfully initialized");

  return call_immediately(STATE(update));
#else
  return exit();
#endif // CONFIG_DISPLAY_TYPE_OLED
}

StateFlowBase::Action StatusDisplay::initLCD()
{
#if CONFIG_DISPLAY_TYPE_LCD
  LOG(INFO,
      "[StatusDisplay] Detected LCD on address 0x%02x, initializing %dx%x "
      "display..."
    , i2cAddr_, CONFIG_DISPLAY_COLUMN_COUNT, CONFIG_DISPLAY_LINE_COUNT);

  // wake up the LCD and init to known state
  send_to_lcd(i2cAddr_, 0x00);
  vTaskDelay(pdMS_TO_TICKS(10));

  // send init data to reset to 8 bit mode
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE | CONFIG_DISPLAY_LCD_ENABLE_BITMASK));
  ets_delay_us(1);
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE));
  ets_delay_us(4537);
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE | CONFIG_DISPLAY_LCD_ENABLE_BITMASK));
  ets_delay_us(1);
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE));
  ets_delay_us(237);
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE | CONFIG_DISPLAY_LCD_ENABLE_BITMASK));
  ets_delay_us(1);
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | LCD_8BIT_MODE));
  ets_delay_us(237);

  // switch to four bit mode
  send_to_lcd(i2cAddr_, (LCD_FUNCTION_SET | CONFIG_DISPLAY_LCD_ENABLE_BITMASK));
  ets_delay_us(1);
  send_to_lcd(i2cAddr_, LCD_FUNCTION_SET);
  ets_delay_us(37);

  // send rest of init commands as 4 bit mode
  send_lcd_byte(i2cAddr_, LCD_FUNCTION_SET | LCD_TWO_LINE_MODE, false);
  send_lcd_byte(i2cAddr_, LCD_CMD_DISPLAY_CONTROL | LCD_DISPLAY_ON, false);
  send_lcd_byte(i2cAddr_, LCD_CMD_CLEAR_SCREEN, false);
  ets_delay_us(1600); // clear takes 1.5ms
  send_lcd_byte(i2cAddr_, LCD_CMD_ENTRY_MODE | LCD_ENTRY_LEFT_TO_RIGHT, false);
  send_lcd_byte(i2cAddr_, LCD_CMD_RETURN_HOME, false);
  ets_delay_us(1600); // home takes 1.5ms
  return call_immediately(STATE(update));
#else
  return exit();
#endif // CONFIG_DISPLAY_TYPE_LCD
}

StateFlowBase::Action StatusDisplay::update()
{
#if CONFIG_LOCONET
  static uint8_t rotatingLineCount = 7;
#else
  static uint8_t rotatingLineCount = 5;
#endif
  // switch to next status line detail set after 10 iterations
  if(++updateCount_ > 10)
  {
    updateCount_ = 0;
    ++rotatingIndex_ %= rotatingLineCount;
  }
  // update the status line details every other iteration
  if(updateCount_ % 2)
  {
    if(rotatingIndex_ == 0)
    {
      status("Free Heap:%d"
                , heap_caps_get_free_size(MALLOC_CAP_INTERNAL)
      );
    }
    else if (rotatingIndex_ == 1)
    {
      uint64_t seconds = USEC_TO_SEC(esp_timer_get_time());
      status("Uptime: %02d:%02d:%02d"
                , (uint32_t)(seconds / 3600), (uint32_t)(seconds % 3600) / 60
                , (uint32_t)(seconds % 60)
      );
    }
    else if (rotatingIndex_ == 2)
    {
      status("Active Locos:%3d"
                , Singleton<commandstation::AllTrainNodes>::instance()->size()
      );
    }
    else if (rotatingIndex_ == 3)
    {
      status(Singleton<RMTTrackDevice>::instance()->get_status_screen_data());
    }
    else if (rotatingIndex_ == 4)
    {
      static uint8_t _lccStatusIndex = 0;
      ++_lccStatusIndex %= 5;
      if(_lccStatusIndex == 0)
      {
        status("LCC Nodes: %d"
                  , lccStatCollector_.getRemoteNodeCount()
        );
      }
      else if (_lccStatusIndex == 1)
      {
        status("LCC Lcl: %d", lccStatCollector_.getLocalNodeCount()
        );
      }
      else if (_lccStatusIndex == 2)
      {
        status("LCC dg_svc: %d", lccStatCollector_.getDatagramCount()
        );
      }
      else if (_lccStatusIndex == 3)
      {
        status("LCC Ex: %d", lccStatCollector_.getExecutorCount()
        );
      }
      else if (_lccStatusIndex == 4)
      {
        status("LCC Pool: %d/%d", lccStatCollector_.getPoolFreeCount()
                  , lccStatCollector_.getPoolSize()
        );
      }
#if CONFIG_LOCONET
    }
    else if (rotatingIndex_ == 5)
    {
      status("LN-RX: %d/%d", locoNet.getRxStats()->rxPackets
                , locoNet.getRxStats()->rxErrors
      );
    }
    else if (rotatingIndex_ == 6)
    {
      status("LN-TX: %d/%d/%d", locoNet.getTxStats()->txPackets
                , locoNet.getTxStats()->txErrors
                , locoNet.getTxStats()->collisions
      );
#endif
    }
  }

  for (uint8_t line = 0; line < CONFIG_DISPLAY_LINE_COUNT; line++)
  {
    // if the line has not changed skip it
    if (!lineChanged_[line])
    {
      continue;
    }

#if CONFIG_DISPLAY_TYPE_OLED
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (i2cAddr_ << 1) | I2C_MASTER_WRITE, true);
    i2c_master_write_byte(cmd, OLED_COMMAND_STREAM, true);
    i2c_master_write_byte(cmd, OLED_SET_PAGE | line, true);
    if (sh1106_)
    {
      i2c_master_write_byte(cmd, 0x02, true);
      i2c_master_write_byte(cmd, 0x10, true);
    }
    else
    {
      i2c_master_write_byte(cmd, OLED_MEMORY_COLUMN_RANGE, true);
      i2c_master_write_byte(cmd, 0x00, true);
      i2c_master_write_byte(cmd, CONFIG_DISPLAY_OLED_WIDTH - 1, true);
    }
    i2c_master_stop(cmd);
    ESP_ERROR_CHECK_WITHOUT_ABORT(
      i2c_master_cmd_begin(I2C_NUM_0, cmd, DISPLAY_I2C_TIMEOUT));
    i2c_cmd_link_delete(cmd);

    cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (i2cAddr_ << 1) | I2C_MASTER_WRITE, true);
    i2c_master_write_byte(cmd, OLED_DATA_STREAM, true);
    uint8_t col = 0;
    for (auto ch : lines_[line])
    {
      // Check that the character is a renderable character.
      if (ch <= 0x7f)
      {
        i2c_master_write(cmd, (uint8_t *)oled_font[(uint8_t)ch]
                        , OLED_FONT_WIDTH, true);
      }
      else
      {
        // since it is not a renderable character, send the 50% shaded block to
        // the display instead so the rendering stays consistent
        i2c_master_write(cmd, (uint8_t *)oled_font[1], OLED_FONT_WIDTH, true);
      }
      col++;
      // make sure we haven't rendered past the end of the display
      if (col >= CONFIG_DISPLAY_COLUMN_COUNT)
      {
        break;
      }
    }
    while(col++ < CONFIG_DISPLAY_COLUMN_COUNT)
    {
      i2c_master_write(cmd, (uint8_t *)oled_font[0], OLED_FONT_WIDTH, true);
    }
    i2c_master_stop(cmd);
    ESP_ERROR_CHECK_WITHOUT_ABORT(
      i2c_master_cmd_begin(I2C_NUM_0, cmd, DISPLAY_I2C_TIMEOUT));
    i2c_cmd_link_delete(cmd);
#elif CONFIG_DISPLAY_TYPE_LCD
    send_lcd_byte(i2cAddr_, LCD_ADDRESS_SET | LCD_LINE_OFFSETS[line], false);
    uint8_t col = 0;
    for (auto ch : lines_[line])
    {
      send_lcd_byte(i2cAddr_, ch, true);
      col++;
      if (col >= CONFIG_DISPLAY_COLUMN_COUNT)
      {
        break;
      }
    }
    // space pad to the width of the LCD
    while(col++ < CONFIG_DISPLAY_COLUMN_COUNT)
    {
      send_lcd_byte(i2cAddr_, ' ', true);
    }
#endif
    lineChanged_[line] = false;
  }
  return sleep_and_call(&timer_, MSEC_TO_NSEC(450), STATE(update));
}
